kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: django
    creation_method: manual
    env: dev
  name: django
spec:
  containers:
  - env:
    - name: DATABASE_URL
      value: postgres://test_k8s:OwOtBep9Frut@192.168.0.246:5431/test_k8s
    image: django_app:latest
    imagePullPolicy: IfNotPresent
    name: django
    ports:
    - containerPort: 80
      protocol: TCP
