kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
    env: dev
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - image: django_app:latest
        imagePullPolicy: IfNotPresent
        name: django-app
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
    env: dev
    tier: backend
  name: django-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: django
