kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
    env: dev
    tier: backend
  name: django-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: django
