kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: django
    creation_method: manual
    env: dev
  name: django
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31978
  selector:
    run: django
